Fix font contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ h6 {
 }
 
 .booknow-btn:hover {
-	background-color: #B2A69D;
+	background-color: rgb(172, 145, 125);
 	color: white;
 }
 
@@ -299,7 +299,7 @@ a.dropdown-item:active {
 
 .testimonial-p {
 	text-align: justify;
-	color: white;
+	color: black;
 	font-size: 15px;
 	padding-bottom: 5px;
 	background-color: #7091A9;
@@ -499,10 +499,10 @@ a.resource-link {
 
 footer {
 	background-color: #7091A9;
-	color: white;
-	font-size: 10px;
+	color: black;
+	font-size: 13px;
 	padding: 8px 16px 8px 16px;
-	min-height: 100px;
+    min-height: 100px;
 }
 
 .footer-head {
@@ -518,8 +518,7 @@ footer {
 	height: 30px;
 	padding: 10px;
 	margin-bottom: 5px;
-	font-size: 10px;
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    font-size: 13px;
 }
 
 p.footer i {
@@ -528,7 +527,6 @@ p.footer i {
 	padding: 10px;
 	margin-right: 5px;
 	font-size: 15px;
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 	line-height: 10px;
 	text-align: center;
 	color: #fafafa;
@@ -544,7 +542,6 @@ img.logo.footer {
 
 .social-btns {
 	text-align: center;
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .social-btns li {
